[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/numbers-small.png" type="Texture" id=1]
[ext_resource path="res://assets/projects-small.png" type="Texture" id=2]
[ext_resource path="res://assets/circuits-small.png" type="Texture" id=3]
[ext_resource path="res://assets/gates-small.png" type="Texture" id=4]
[ext_resource path="res://assets/home-small.png" type="Texture" id=5]
[ext_resource path="res://Buttons.gd" type="Script" id=6]

[node name="Buttons" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -1530.0
margin_bottom = -1006.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Main menu"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )

[node name="Numbers" type="TextureButton" parent="."]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Numbers"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )

[node name="Gates" type="TextureButton" parent="."]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Gates"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="Circuits" type="TextureButton" parent="."]
margin_left = 222.0
margin_right = 286.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Circuits"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )

[node name="Systems" type="TextureButton" parent="."]
margin_left = 296.0
margin_right = 360.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Systems"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
[connection signal="button_down" from="Home" to="." method="_on_Home_button_down"]
[connection signal="button_down" from="Numbers" to="." method="_on_Numbers_button_down"]
[connection signal="button_down" from="Gates" to="." method="_on_Gates_button_down"]
[connection signal="button_down" from="Circuits" to="." method="_on_Circuits_button_down"]
[connection signal="button_down" from="Systems" to="." method="_on_Projects_button_down"]
